--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,7 +12,13 @@ body {
     display: flex;
     flex-direction: column;
     font-family: 'Open Sans', 'Times New Roman', Times, serif;
+    font-weight: 350;
+    color: var(--fg-dark-color);
 }
+
+/* -------------------------------------------------*/
+/* ------------------- HEADER ----------------------*/
+/* -------------------------------------------------*/
 
 body header {
     background-image: url('../images/header_bg.svg');
@@ -20,13 +26,23 @@ body header {
     background-repeat: no-repeat;
     background-clip: border-box;
     background-size: cover;
-    padding: 15% 5%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+    min-height: 50vh;
+    max-height: fit-content;
+}
+
+header section {
+    max-width: 90%;
 }
 
 header .access {
     display: flex;
     flex-direction: column;
     height: fit-content;
+    margin: 4vh 0;
 }
 
 .access h1 {
@@ -44,7 +60,16 @@ header .access {
     letter-spacing: 0.018rem;
 }
 
-.access button {
+.access .buttons {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-content: space-between;
+    gap: 2vh 2vw;
+    margin: 2.5vh 0;
+}
+
+.buttons button {
     width: 100%;
     max-width: 25rem;
     padding: 1rem 0;
@@ -54,7 +79,6 @@ header .access {
 }
 
 .access button:first-of-type {
-    margin-bottom: 5%;
     background-color: var(--bg-light-color);
     color: var(--fg-dark-color);
 }
@@ -62,19 +86,171 @@ header .access {
 .access button:last-of-type {
     background-color: var(--bg-dark-color);
     color: var(--fg-light-color);
+    font-weight: 300;
 }
+
+/* -------------------------------------------------*/
+/* -------------------- MAIN -----------------------*/
+/* -------------------------------------------------*/
 
 main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 15% 5%;
+    justify-content: space-evenly;
+    row-gap: 1vh;
 }
 
-main .spaces {
-    width: 100%;
+main section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 3vh 0;
 }
 
-main .spaces img {
+main section .main-text {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    text-align: left;
+    justify-content: space-evenly;
+    gap: 3vh;
+}
+
+main section .main-text, main section img {
+    width: 90%;
+}
+
+main section .main-text h2 {
+    line-height: 150%;
+    font-weight: 800;
+    letter-spacing: 0.03rem;
+    margin: 0;
+}
+
+main section .main-text p {
+    line-height: 150%;
+    margin: 0;
+}
+
+main .meeting, main .connection {
+    background-color: var(--bg-light-color);
+}
+
+main .connection h2 {
+    font-family: 'Luckiest Guy', 'Open Sans', Verdana, Geneva, Tahoma, sans-serif;
+    letter-spacing: 0.08rem;
+}
+
+/* -------------------------------------------------*/
+/* ------------------- FOOTER ----------------------*/
+/* -------------------------------------------------*/
+
+body footer {
+    background-color: var(--bg-dark-color);
+    display: flex;
     width: 100%;
+    height: fit-content;
+    align-items: center;
+    justify-content: center;
+}
+
+footer img {
+    max-width: 30%;
+    min-width: 160px;
+    padding: 12%;
+}
+
+
+/* --------------------------------------------------*/
+/* -------------------- DESKTOP ---------------------*/
+/* --------------------------------------------------*/
+
+@media (min-width: 1200px) {
+    body p {
+        line-height: 1.5rem;
+    }
+
+    /* -------------------------------------------------*/
+    /* ------------------- HEADER ----------------------*/
+    /* -------------------------------------------------*/
+
+    header .access {
+        align-items: center;
+    }
+
+    .access h1 {
+        font-size: 4.66rem;
+        max-width: 30%;
+        text-align: center;
+        margin: 1.2rem 0rem;
+    }
+
+    .access p {
+        text-align: center;
+        max-width: 50%;
+    }
+
+    .access .buttons {
+        flex-direction: row;
+        justify-content: center;
+    }
+
+    .buttons button {
+        width: fit-content;
+        padding: 1rem 2rem;
+    }
+
+    /* -------------------------------------------------*/
+    /* -------------------- MAIN -----------------------*/
+    /* -------------------------------------------------*/
+
+    main section {
+        flex-direction: row;
+        align-items: flex-start;
+        width: 70%;
+        gap: 0 1vw;
+    }
+
+    main section img {
+        width: 40vw;
+    }
+
+    main section .main-text {
+        width: 18vw;
+        padding: 1.5vw 0;
+        font-weight: 500;
+    }
+
+    main section .main-text h2 {
+        font-size: 2.5rem;
+    }
+
+    main .meeting, main .connection {
+        flex-direction: row-reverse;
+    }
+
+    main .connection {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    main .connection .main-text {
+        width: 43vw;
+        text-align: center;
+    }
+
+    main .connection .main-text h2 {
+        width: 70%;
+        align-self: center;
+    }
+
+    /* -------------------------------------------------*/
+    /* ------------------- FOOTER ----------------------*/
+    /* -------------------------------------------------*/
+
+    footer img {
+        padding: 5vh;
+    }
+
 }
